--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = esp32c3, windows_stub
+default_envs = esp32c3, windows
 
 ; ESP32-C3 Super Mini Configuration
 [env:esp32c3]
@@ -26,14 +26,16 @@ build_flags =
     -DESP32
     -DLED_PIN=2
     -Ilib/stb
+    -Iapi
 build_src_filter = +<*> +<../lib/stb/>
 
 ; Windows Stub Configuration for Development
-[env:windows_stub]
+[env:windows]
 platform = native
 framework = 
 build_flags = 
-    -DWINDOWS_STUB
+    -DWINDOWS
     -std=c++17
     -Ilib/stb
+    -Iapi
 build_src_filter = +<*> +<../lib/stb/>
