added display base platform agnostic approach (stable abi)

--- a/platformio.ini
+++ b/platformio.ini
@@ -27,6 +27,7 @@ build_flags =
     -DLED_PIN=2
     -Ilib/stb
     -Iapi
+    ; -DLED_COUNT=60
 build_src_filter = +<*> +<../lib/stb/>
 
 ; Windows Stub Configuration for Development
@@ -38,4 +39,5 @@ build_flags =
     -std=c++17
     -Ilib/stb
     -Iapi
+    -DLED_COUNT=60
 build_src_filter = +<*> +<../lib/stb/>
