--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,31 +12,31 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "C:/sourcecode/c/poixels/.pio/build/esp32c3/firmware.elf",
-            "projectEnvName": "esp32c3",
-            "toolchainBinDir": "C:/Users/deanp/.platformio/packages/toolchain-riscv32-esp/bin",
+            "executable": "${workspaceFolder}/.pio/build/windows/program.exe",
+            "projectEnvName": "windows",
+            "toolchainBinDir": "C:/Users/deanp/scoop/apps/mingw/current/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "preLaunchTask": {
                 "type": "PlatformIO",
-                "task": "Pre-Debug"
+                "task": "Pre-Debug (windows)"
             }
         },
         {
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "C:/sourcecode/c/poixels/.pio/build/esp32c3/firmware.elf",
-            "projectEnvName": "esp32c3",
-            "toolchainBinDir": "C:/Users/deanp/.platformio/packages/toolchain-riscv32-esp/bin",
+            "executable": "${workspaceFolder}/.pio/build/windows/program.exe",
+            "projectEnvName": "windows",
+            "toolchainBinDir": "C:/Users/deanp/scoop/apps/mingw/current/bin",
             "internalConsoleOptions": "openOnSessionStart"
         },
         {
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "C:/sourcecode/c/poixels/.pio/build/esp32c3/firmware.elf",
-            "projectEnvName": "esp32c3",
-            "toolchainBinDir": "C:/Users/deanp/.platformio/packages/toolchain-riscv32-esp/bin",
+            "executable": "${workspaceFolder}/.pio/build/windows/program.exe",
+            "projectEnvName": "windows",
+            "toolchainBinDir": "C:/Users/deanp/scoop/apps/mingw/current/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "loadMode": "manual"
         }
