cleanup and esp32 compile

--- a/platformio.ini
+++ b/platformio.ini
@@ -27,7 +27,7 @@ build_flags =
     -DLED_PIN=2
     -Ilib/stb
     -Iapi
-    ; -DLED_COUNT=60
+    -DLED_COUNT=60
 build_src_filter = +<*> +<../lib/stb/>
 
 ; Windows Stub Configuration for Development
