--- a/platformio.ini
+++ b/platformio.ini
@@ -11,33 +11,29 @@
 [platformio]
 default_envs = esp32c3, windows
 
-; ESP32-C3 Super Mini Configuration
 [env:esp32c3]
 platform = espressif32
 board = esp32-c3-devkitm-1
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
-    adafruit/Adafruit NeoPixel@^1.12.0
-    ; me-no-dev/ESPAsyncWebServer@^1.2.3
-    ; me-no-dev/AsyncTCP@^1.1.1
-    ; bblanchon/ArduinoJson@^7.0.4
+	adafruit/Adafruit NeoPixel@^1.12.0
+	esp32async/ESPAsyncWebServer@^3.8.1
 build_flags = 
-    -DESP32
-    -DLED_PIN=2
-    -Ilib/stb
-    -Iapi
-    -DLED_COUNT=60
+	-DESP32
+	-DLED_PIN=2
+	-Ilib/stb
+	-Iapi
+	-DLED_COUNT=60
 build_src_filter = +<*> +<../lib/stb/>
 
-; Windows Stub Configuration for Development
 [env:windows]
 platform = native
 framework = 
 build_flags = 
-    -DWINDOWS
-    -std=c++17
-    -Ilib/stb
-    -Iapi
-    -DLED_COUNT=60
+	-DWINDOWS
+	-std=c++17
+	-Ilib/stb
+	-Iapi
+	-DLED_COUNT=60
 build_src_filter = +<*> +<../lib/stb/>
