--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "C:/sourcecode/C/poixels/.pio/build/windows/program.exe",
+            "executable": "C:/sourcecode/c/poixels/.pio/build/windows/program.exe",
             "projectEnvName": "windows",
             "toolchainBinDir": "C:/Users/deanp/scoop/apps/mingw/current/bin",
             "internalConsoleOptions": "openOnSessionStart",
@@ -25,7 +25,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "C:/sourcecode/C/poixels/.pio/build/windows/program.exe",
+            "executable": "C:/sourcecode/c/poixels/.pio/build/windows/program.exe",
             "projectEnvName": "windows",
             "toolchainBinDir": "C:/Users/deanp/scoop/apps/mingw/current/bin",
             "internalConsoleOptions": "openOnSessionStart"
@@ -34,7 +34,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "C:/sourcecode/C/poixels/.pio/build/windows/program.exe",
+            "executable": "C:/sourcecode/c/poixels/.pio/build/windows/program.exe",
             "projectEnvName": "windows",
             "toolchainBinDir": "C:/Users/deanp/scoop/apps/mingw/current/bin",
             "internalConsoleOptions": "openOnSessionStart",
